Fix txs actions overflowing on sm screens

--- a/src/transac/components/transactions/transaction-reconcile/transaction-reconcile.less
+++ b/src/transac/components/transactions/transaction-reconcile/transaction-reconcile.less
@@ -49,7 +49,7 @@ transac-tx-reconcile {
       max-width: 48%;
       margin: 1%;
 
-      @media (max-width: 992px) {
+      @media (max-width: @screen-sm-max) {
         min-width: 100%;
         max-width: 100%;
         margin: 0;
@@ -67,7 +67,7 @@ transac-tx-reconcile {
       min-width: 50%;
       max-width: 50%;
 
-      @media (max-width: 992px) {
+      @media (max-width: @screen-sm-max) {
         min-width: 100%;
         max-width: 100%;
       }
