--- a/src/transac/components/transactions/transaction/transaction.less
+++ b/src/transac/components/transactions/transaction/transaction.less
@@ -31,7 +31,7 @@ transac-tx {
   .tx-summary {
     height: @transac-tx-height;
     width: 100%;
-    display: flex;
+    display: -webkit-box;
 
     & > .content {
       height: 100%;
